# weird-oranda-test

./: Cargo.toml  artifacts.json  index.html  oranda.json  weird-oranda-test-installer.sh.txt
.github/workflows/: release.yml
artifacts/: index.html
funding/: index.html
public/: index.html
